added typed ports and pipes for the CountWordsAnalysis